--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,14 @@ h2 {
     background-clip: text;
     -webkit-background-clip: text;
     margin-bottom: 3rem;
+    animation: 3s spin infinite;
+}
+
+#nrm-gradient {
+    background: linear-gradient(145deg, #85effd, #47acff, #1f1f7a);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 hr {
@@ -37,8 +45,12 @@ hr {
     margin: 0 auto;
     margin-top: 30px;
     margin-bottom: 30px;
+    background: #000;
+    color: #000;
 }
 
+
+/* main styles */
 .loader {
     height: 100vh;
     width: 100%;
@@ -51,11 +63,66 @@ hr {
     z-index: 1000;
 }
 
+.intro-heading {
+    margin: auto;
+    padding: 0;
+    height: fit-content;
+    width: 100%;
+    text-align: center;
+}
+
+.intro-heading p {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5rem;
+    display: inline-block;
+    margin: 0 5px;
+    opacity: 0;
+    animation: 2.4s fadeIn forwards;
+}
+
+#i {
+    animation-delay: 0.2s;
+}
+
+#ii {
+    animation-delay: 0.3s;
+}
+
+#iii {
+    animation-delay: 0.4s;
+    font-weight: 645;
+    background: linear-gradient(145deg, #356a96, #000044, #000000);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#iv {
+    animation-delay: 0.6s;
+}
+
+#v {
+    animation-delay: 0.8s;
+    font-weight: 645;
+    background: linear-gradient(145deg, #356a96, #000044, #000000);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#vi {
+    animation-delay: 1s;
+}
+
 /* nav-bar-section */
+.actual-menu {
+    display: none;
+}
+
 nav {
     padding: 0.7rem;
-    background-color: #ffffff57;
-    box-shadow: 0 0 15px #00000070;
+    background-color: #47acff36;
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
     display: flex;
@@ -66,13 +133,9 @@ nav {
     width: 100%;
 }
 
-.actual-menu {
-    display: none;
-}
-
 .ham-menu {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     margin-left: auto;
     position: relative;
     z-index: 100;
@@ -88,20 +151,15 @@ nav {
     transform: translate(-50%, -50%);
     transition: .3s ease;
     z-index: 1000;
+    background: #001125;
 }
 
 .ham-menu span:nth-child(1) {
     top: 25%;
-    background-color: #000086;
-}
-
-.ham-menu span:nth-child(2) {
-    background-color: #0000ff;
 }
 
 .ham-menu span:nth-child(3) {
     top: 75%;
-    background-color: #000;
 }
 
 .ham-menu.active span:nth-child(1) {
@@ -127,7 +185,7 @@ a {
 }
 
 .off-screen-menu {
-    background-color: #ffffff57;
+    background-color: #47acff36;
     box-shadow: 0 0 25px #000000c5;
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
@@ -167,100 +225,14 @@ a {
 .off-screen-menu ul li {
     margin: 20% 0;
     text-decoration: none;
-    background: linear-gradient(135deg, #000086, #0000ff, #000);
+    background: linear-gradient(145deg, #356a96, #000044, #000000);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.intro-heading {
-    margin: auto;
-    padding: 0;
-    height: fit-content;
-    width: 100%;
-    text-align: center;
-}
 
-.intro-heading p {
-    margin: 0;
-    padding: 0;
-    font-size: 2.5rem;
-    display: inline-block;
-    margin: 0 5px;
-    opacity: 0;
-    animation: 2.4s fadeIn forwards;
-}
-
-#i {
-    animation-delay: 0.2s;
-}
-
-#ii {
-    animation-delay: 0.3s;
-}
-
-#iii {
-    animation-delay: 0.4s;
-    font-weight: 645;
-    background: linear-gradient(135deg, #919191, #0000ff, #000);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#iv {
-    animation-delay: 0.6s;
-}
-
-#v {
-    animation-delay: 0.8s;
-    font-weight: 645;
-    background: linear-gradient(135deg, #919191, #0000ff, #000);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-#vi {
-    animation-delay: 1s;
-}
-
-@keyframes fadeIn {
-    0% {
-        transform: translateY(80%);
-        opacity: 0%;
-    }
-
-    15% {
-        transform: translateY(0%);
-        opacity: 100%;
-    }
-
-    85% {
-        transform: translate(0%);
-        opacity: 100%;
-    }
-    
-    100% {
-        transform: translateY(-80%);
-        opacity: 0%;
-    }
-}
-@keyframes exit {
-    0% {
-        opacity: 100%;
-    }
-
-    90% {
-        opacity: 100%;
-    }
-
-    100% {
-        opacity: 0;
-        pointer-events: none;
-    }
-}
-
+/* hero section */
 .video-container {
     top: 0;
     left: 0;
@@ -291,13 +263,13 @@ a {
     color: #fff;
     font-size: 1.5rem;
     margin: 20px 10px;
-    background: linear-gradient(145deg, #356a96, #0000ff, #000);
+    background: linear-gradient(145deg, #356a96, #0f0040, #000);
     padding: 0.5rem 1rem;
     border-radius: 30px;
 }
 
 .header h1 {
-    background: linear-gradient(135deg, #919191, #000086, #000);
+    background: linear-gradient(135deg, #ffffff, #47acff, #022650);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -314,83 +286,9 @@ a {
     border: 2px solid #def0ff;
 }
 
-.group-img {
-    width: 100%;
-    height: auto;
-    padding: 20px;
-}
-
-.group-img img {
-    width: 100%;
-    height: auto;
-}
-
-.container {
-    background: linear-gradient(#000000, #00001d, #000044);
-    color: white;
-    padding: 50px 5px;
-    text-align: center;
-}
-
-.grid {
-    display: inline-block;
-    position: relative;
-    max-width: 600px;
-    margin: 50px auto;
-    overflow: hidden;
-}
-
-.slide {
-    display: none;
-}
-
-.slide img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-
-.fade {
-    animation: fade 1s ease-in-out;
-}
-
-@keyframes fade {
-    from {
-        opacity: 0.4;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-.showcase {
-    padding: 1rem 10px;
-    display: flex;
-}
-
-.small-container {
-    padding: 1px 8px;
-    box-shadow: 0 3px 10px #000000a6;
-    width: 39%;
-    height: auto;
-    margin: 10px auto;
-    border-radius: 20px;
-    background: #00001d;
-}
-
-.small-container h1 {
-    font-size: 1.5rem;
-    font-weight: 900;
-    background: linear-gradient(145deg, #ffffff, #47acff, #4d4dff);
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-}
-
 .showcase-after {
-    background: linear-gradient(#def0ff, #000086, #000000);
-    padding: 10px 5px;
+    background: linear-gradient(#def0ff, #356a96, #356a96);
+    padding: 0 5px;
     color: #fff;
     margin-top: 30px;
     padding-bottom: 30px;
@@ -412,16 +310,98 @@ a {
 }
 
 .showcase-after video {
-    width: 100%;
-    height: 400px;
+    width: fit-content;
+    height: 600px;
     margin: 0 auto;
     margin-top: 20px;
+}
+
+.showcase-group-link {
+    font-size: 1.2rem;
+    width: fit-content;
+    color: #fff;
+    background: linear-gradient(145deg, #5ea2da, #86c9ff, #356a96);
+    box-shadow: 0 0 10px #0000004f;
+    padding: 10px;
+    border-radius: 30px;
+    margin: 0 auto;
+    margin-top: 40px;
+    animation: 3s bounce infinite;
+    transition: all 0.3s ease;
+}
+
+.showcase-group-link:hover {
+    border-radius: 5px;
+}
+
+.small-container {
+    padding: 1px 8px;
+    box-shadow: 0 3px 10px #000000a6;
+    width: 50%;
+    height: auto;
+    margin: 10px;
+    border-radius: 20px;
+    background: #00001d;
+    animation: 3s bounce infinite;
+}
+
+.small-container:nth-child(2) {
+    animation-delay: .1s;
+}
+
+.small-container h1 {
+    font-size: 1.5rem;
+    font-weight: 900;
+    background: linear-gradient(145deg, #cee9ff, #47acff, rgb(241, 241, 241));
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-size: 100%;
+}
+
+.showcase {
+    padding: 1rem 10px;
+    display: flex;
+}
+
+.container {
+    background: linear-gradient(#356a96, #356a96, #bfd3e4);
+    color: white;
+    padding: 50px 5px;
+    text-align: center;
+}
+
+.grid {
+    display: inline-block;
+    position: relative;
+    max-width: 600px;
+    margin: 20px auto;
+    overflow: hidden;
+    height: 300px;
+}
+
+.grid-desktop {
+    display: none;
+}
+
+.slide {
+    display: none;
+}
+
+.slide img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.fade {
+    animation: fade 1s ease-in-out;
 }
 
 .about {
     padding: 20px 10px;
     text-align: justify;
-    background: #000044;
+    background: #bfd3e4;
     margin-bottom: 4rem;
 }
 
@@ -431,38 +411,21 @@ a {
     text-align: center;
 }
 
-.end {
-    border: 1px solid #fff;
-    margin: 0 auto;
-    width: 80%;
-    text-align: center;
-    padding: 0 20px;
-    border-radius: 30px;
-}
-
-.end h1 {
-    font-size: 35px;
-    background: linear-gradient(145deg, #ffffff, #47acff, #4d4dff);
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-}
-
 .about h1 {
     border-radius: 20px;
-    padding: 20px 0;
 }
 
 .about p {
-    color: #fff;
+    color: #000;
+}
+
+.content h2 {
+    color: #1a1a1a;
+    font-size: 1.3rem;
 }
 
 .wcu {
     margin: 100px 0;
-}
-
-.wcu .content h2 {
-    color: #1a1a1a;
 }
 
 .programs {
@@ -479,8 +442,19 @@ a {
 
 .contact {
     padding: 30px 5px;
-    background: #00001d;
-    color: #fff;
+    color: #000;
+}
+
+.end {
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+    padding: 0 20px;
+    border-radius: 30px;
+}
+
+.end h1 {
+    font-size: 35px;
 }
 
 .form {
@@ -491,10 +465,12 @@ a {
     align-items: center;
     padding: 20px 0;
     border-radius: 30px;
+    background: #00001d;
+    box-shadow: 0 0 25px #000000c5;;
 }
 
 .form img {
-    height: 55px;
+    height: 45px;
     width: auto;
     margin: 0 auto;
     backdrop-filter: drop-shadow(0 0 10px #def0ff);
@@ -502,7 +478,7 @@ a {
 
 footer {
     width: 100%;
-    background: #000;
+    background: #00001d;
     margin: 0;
     padding: 0;
     color: #def0ff;
@@ -514,128 +490,9 @@ footer {
 }
 
 footer p {
-    font-size: 16px;
+    font-size: 13px;
 }
 
 footer a {
     color: #ff0000;
-}
-
-@media (min-width: 1024px) {
-    nav {
-        display: none;
-    }
-
-    .actual-menu {
-        display: flex;
-        padding: 20px 0;
-        background: #ffffff57;
-        box-shadow: 0 0 15px #00000070;
-        backdrop-filter: blur(30px);
-        -webkit-backdrop-filter: blur(30px);
-        display: flex;
-        position: fixed;
-        top: 0;
-        z-index: 100;
-        width: 100%;
-    }
-    
-    .actual-menu ul {
-        margin: 0 auto;
-        display: flex;
-        width: 80%;
-    }
-    
-    .actual-menu ul li {
-        margin: 0 auto;
-        list-style: none;
-        font-size: 1.3rem;
-        padding: 10px;
-        border-radius: 100%;
-        transition: all .3s ease-out;
-    }
-    
-    .actual-menu ul li:hover {
-        background: linear-gradient(45deg, #356a9675, #0000ff6e, #00000075);
-        border-radius: 30px;
-    }
-    
-    .actual-menu ul li a {
-        color: #000044;
-    }
-
-    .ham-menu {
-        display: none;
-    }
-
-    .header {
-        padding: 0 10rem;
-    }
-
-    .header p {
-        padding: 2rem 0;
-        width: fit-content;
-        padding: 1rem;
-        margin: 0 auto;
-        margin-bottom: 30px;
-    }
-
-    .header img {
-        height: 20rem;
-        width: auto;
-    }
-
-    .showcase-after img {
-        margin: 70px 0;
-    }
-
-    .showcase-after h2 {
-        font-size: 2rem;
-    }
-
-    .small-container {
-        text-align: center;
-    }
-
-    .small-container h1 {
-        font-size: 3rem;
-    }
-
-    footer {
-        display: flex;
-        text-align: center;
-        justify-content: center;
-        gap: 30%;
-    }
-
-    .content {
-        width: 70%;
-        margin: 0 auto;
-    }
-
-    .content-box {
-        width: 70%;
-        margin: 0 auto;
-    }
-
-    .showcase-after img {
-        width: 70%;
-        margin: 0 auto;
-        margin-top: 50px;
-        margin-bottom: 50px;
-    }
-
-    .showcase-after video {
-        height: 50rem;
-        width: auto;
-    }
-
-    .grid {
-        max-width: 800px;
-    }
-
-    .slide img {
-        width: 40rem;
-        height: auto;
-    }
 }
