--- a/assets/style.css
+++ b/assets/style.css
@@ -309,13 +309,6 @@ a {
     box-shadow: 0 3px 15px #000000a6;
 }
 
-.showcase-after video {
-    width: fit-content;
-    height: 600px;
-    margin: 0 auto;
-    margin-top: 20px;
-}
-
 .showcase-group-link {
     font-size: 1.2rem;
     width: fit-content;
@@ -328,6 +321,13 @@ a {
     margin-top: 40px;
     animation: 3s bounce infinite;
     transition: all 0.3s ease;
+}
+
+.showcase-group video {
+    width: fit-content;
+    height: 600px;
+    margin: 0 auto;
+    margin-top: 20px;
 }
 
 .showcase-group-link:hover {
